Fix erorr when display on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,7 +2,6 @@ html {
     font-size: 62.5%;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     scroll-behavior: smooth;
-    overflow: scroll;
 }
 
 * {
